better help in job list
Former-commit-id: d8d25129a8221ea77397076fd785fb5fa0da2c4d

--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -61,26 +61,26 @@
             <div class="col-sm-4 col-md-4">
                 <fieldset>
                     <div class="checkbox">
-                        <label><input type="checkbox" id="checkboxUSauth" class="filter-checkbox">Hide jobs
+                        <label><input type="checkbox" id="checkboxUSauth" aria-describedby="help50workauth" class="filter-checkbox">Hide jobs
                             requiring US work authorization</label>
                     </div>
                     <div class="checkbox">
-                        <label><input type="checkbox" id="checkboxEUauth" class="filter-checkbox">Hide jobs
+                        <label><input type="checkbox" id="checkboxEUauth" aria-describedby="help50workauth" class="filter-checkbox">Hide jobs
                             requiring EU work authorization</label>
                     </div>
-                    <p class="filterTip smalltext">Some jobs require that you "..must be GCH(Green Card Holder).." In
-                        case you have no such authorization - you can hide such jobs</p>
+                    <span id="help50workauth" class="help-block filterTip smalltext">Some jobs require that you "..must be GCH(Green Card Holder).." In
+                        case you have no such authorization - you can hide such jobs</span>
                 </fieldset>
             </div>
             <div class="col-sm-4 col-md-4">
                 <fieldset>
                     <div class="checkbox">
-                        <label><input type="checkbox" id="checkbox50remote" class="filter-checkbox">Show 50%
+                        <label><input type="checkbox" id="checkbox50remote" aria-describedby="help50remote" class="filter-checkbox">Show 50%
                             remote jobs</label>
                     </div>
-                    <p class="filterTip smalltext">Some job descriptions mention "remote working days" or "occasional
+                    <span id="help50remote" class="help-block filterTip smalltext">Some job descriptions mention "remote working days" or "occasional
                         remote working". This is a clear indicator that you can not work remote from
-                        anywhere. We name such jobs "50% remote".</p>
+                        anywhere. <a href="/faq/2018/04/25/what-does-a-50-percent-remote-job-mean">We name such jobs "50% remote"</a>.</span>
                 </fieldset>
             </div>
         </div>
