links on homepage

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,9 +11,9 @@ layout: default
             </div>
             <div class="col-sm-4">
                 <ul style="padding-left: 0px;">
-                    <li>Only pre-filtered true remote jobs</li>
+                    <li>Only <a href="/faq/2018/04/22/what-does-a-100-percent-remote-job-mean">pre-filtered true remote jobs</a></li>
                     <li>Tech jobs categorized by technology stack and job title</li>
-                    <li>Search 872 jobs from 12 job boards in one place</li>
+                    <li>Search 872 jobs <a href="/faq/2018/04/25/which-job-boards-are-aggregated">from 12 job boards</a> in one place</li>
                 </ul>
             </div>
         </div>
