--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -1,19 +1,4 @@
-{% assign thisnodes = site.data.jobnav | where:"url", page.permalink %}
-
-{% capture difference %} {{ thisnodes | size | minus:1 }} {% endcapture %}
-{% if difference contains '-' %}
-  {% assign thisnodes = site.data.jobnav[site.jobnav_developers_node].subnodes | where:"url", page.permalink %}
-{% endif %}
-
-{% capture difference %} {{ thisnodes | size | minus:1 }} {% endcapture %}
-{% if difference contains '-' %}
-{% assign thisnodes = site.data.jobnav[site.jobnav_tech_node].subnodes | where:"url", page.permalink %}
-{% endif %}
-
-{% capture difference %} {{ thisnodes | size | minus:1 }} {% endcapture %}
-{% if difference contains '-' %}
-{% assign thisnodes = site.data.jobnav[site.jobnav_nontech_node].subnodes | where:"url", page.permalink %}
-{% endif %}
+{% include compute_thisnodes %}
 
 <section class="hgroup">
   <div class="container">
