--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -104,11 +104,14 @@
     <script type="text/javascript" src="{{ ASSET_PATH }}/js/snap.svg-min.js"></script>
     <script type="text/javascript" src="{{ ASSET_PATH }}/js/restart_theme.js"></script>
     <script type="text/javascript" src="{{ ASSET_PATH }}/js/collapser.js"></script>
+    <script type="text/javascript" src="{{ ASSET_PATH }}/js/handlebars-v4.0.11.js"></script>
 
   {% if thisnodes[0].datafile %}
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap-table.js"></script>
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap-table-en-US.min.js"></script>
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/render_jobad_list_filter.js"></script>
+
+    {% include themes/restart/page-jobad-jobdetails-handlebars.html %}
   {% endif %}
   {% include JB/analytics %}
   </body>
