--- a/assets/themes/restart/css/style.css
+++ b/assets/themes/restart/css/style.css
@@ -8367,3 +8367,12 @@ blockquote p {
     display: none;
   }
 }
+
+.report-btn-font-body {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.div-report-btn button {
+  color: #428bca;
+  border: none;
+}
