--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,28 +2,45 @@
 layout: default
 ---
 {% include JB/setup %}
-<section class="hgroup">
-    <div class="container" style="padding-top: 0px;">
-        <div class="row">
-            <div class="col-sm-8">
-                <h1 style="color: #428bca;">{{ page.tagline }}</h1>
-            </div>
-            <div class="col-sm-4">
-                <ul style="padding-left: 0px;">
-                    <li>Only <a href="/faq/2018/04/22/what-does-a-100-percent-remote-job-mean">pre-filtered true remote jobs</a></li>
-                    <li>Tech jobs categorized by technology stack and job title</li>
-                    <li>Search 872 jobs <a href="/faq/2018/04/25/which-job-boards-are-aggregated">from 12 job boards</a> in one place</li>
-                </ul>
-            </div>
-        </div>
+
+<section class="call_to_action">
+  <div class="container">
+    <div class="text">
+      <h3><strong>an aggregator for remote jobs</strong></h3>
+      <h4><strong>in tech and non-tech</strong></h4>
+      <a class="btn btn-primary btn-lg" href="#jobs">Find a remote job</a>
     </div>
+  </div>
 </section>
+
+<section class="features_teasers_wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="feature_teaser col-sm-4 col-md-4">
+        <h3>PRE-FILTERED 100% REMOTE JOBS</h3>
+        This site shows you only the jobs having phrases like “team is entirely remote” or “work from whenever you want” in the job description. Jobs saying something like “remotely on Friday” or “occasional remote working” are filtered out.</p>
+      </div>
+      <div class="feature_teaser col-sm-4 col-md-4">
+        <h3>REMOTE JOBS CATEGORIZED BY JOB TITLE AND TECHNOLOGY STACK</h3>
+        <p>Correct job classification: for every remote role in a tech company this site offers a separate page. Developers: open a page listing remote jobs for your technology stack!</p>
+      </div>
+      <div class="feature_teaser col-sm-4 col-md-4">
+        <h3>SEARCH 872 JOBS FROM 12 JOB BOARDS IN ONE PLACE</h3>
+        <p>Remote jobs scattered across generic job sites, job boards for developers/designers and specialized remote job board. This site makes the process of finding a remote job easier.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="container">
+    <hr>
+</div>
 
 <section class="hgroup">
     <div class="container" style="padding-top: 0px; border-bottom: none;">
         <div class="row">
             <div class="col-md-4">
-                <h2 class="section_header elegant">{{ site.data.jobnav[site.jobnav_developers_node].title }}</h2>
+                <a id="jobs"><h2 class="section_header elegant">{{ site.data.jobnav[site.jobnav_developers_node].title }}</h2></a>
                 <p></p>
                 {% for node in site.data.jobnav[site.jobnav_developers_node].subnodes %}
                 <p><a href="{{ node.url }}">{{ node.home_title }}</a> - {{ node.tagline }}
@@ -47,5 +64,3 @@ layout: default
         </div>
     </div>
 </section>
-
-
