BIG changes: all vector fonts in one font; unused CSS+JS removed

--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -11,7 +11,7 @@
                     <input type="search" class="form-control" id="jobSearchInputID" placeholder="Search">
                     <span class="input-group-btn" id="jobSearchGroup">
                                    <button type="submit" class="btn btn-default btn-primary" id="jobSearchButton">
-                                       <i class="glyphicon glyphicon-search"></i>
+                                       <i class="fa fa-search"></i>
                                    </button>
                               </span>
                 </div>
