--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -12,11 +12,9 @@
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/animate.css" type="text/css">
-<link rel="stylesheet" href="{{ ASSET_PATH }}/js/woothemes-FlexSlider-06b12f8/flexslider.css" type="text/css" media="screen">
-<link rel="stylesheet" href="{{ ASSET_PATH }}/js/prettyPhoto_3.1.5/prettyPhoto.css" type="text/css" media="screen">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.css" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/userstyle.css" type="text/css">
-<link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.min.css" media="screen">
+<link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.css" media="screen">
 
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
@@ -87,24 +85,15 @@
       </footer>
     </div>
 
-  <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.12.4.js"></script>
-  <!--
-    <script src=https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js></script>
-    <script>window.jQuery||document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')</script>
-  -->
-
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap.min.js" ></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/modernizr.custom.48287.js"></script>
-    <script src="{{ ASSET_PATH }}/js/woothemes-FlexSlider-06b12f8/jquery.flexslider-min.js"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/prettyPhoto_3.1.5/jquery.prettyPhoto.js" charset="utf-8"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/isotope/jquery.isotope.min.js"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery.ui.totop.js"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/easing.js"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/wow.min.js"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/snap.svg-min.js"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/restart_theme.js"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/collapser.js"></script>
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/handlebars-v4.0.11.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.12.4.min.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap.min.js" ></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/modernizr.custom.48287.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery.ui.totop.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/easing.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/wow.min.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/restart_theme.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/collapser.js"></script>
+  <script type="text/javascript" src="{{ ASSET_PATH }}/js/handlebars-v4.0.11.js"></script>
 
   {% if thisnodes[0].datafile %}
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap-table.js"></script>
