--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,8 +6,8 @@ layout: default
 <section class="call_to_action">
   <div class="container">
     <div class="text">
-      <h3><strong>an aggregator for remote jobs</strong></h3>
-      <h4><strong>in tech and non-tech</strong></h4>
+      <h3 style="color: #428bca;"><strong>an aggregator for remote jobs</strong></h3>
+      <h4>in tech and non-tech</h4>
       <a class="btn btn-primary btn-lg" href="#jobs">Find a remote job</a>
     </div>
   </div>
