--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -87,3 +87,11 @@ a.detail-icon:visited{
     }
 
 }
+
+@media screen and (min-width: 768px) {
+    section.call_to_action {
+        background-image: url(/assets/svg/background1-14_opt-3.svg);
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+}
