--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -28,9 +28,7 @@
     <div class="container">
       <div class="navbar navbar-default" role="navigation">
         <div class="navbar-header"><a class="navbar-brand" href="{{ HOME_PATH }}">
-          <!--
-          <img src="images/restart_logo.png" alt="optional logo" height="90" width="90">
-          -->
+          <img src="/assets/svg/logo-rect-3_opt.svg" alt="metajob logo" >
           <span class="logo_title" style="color: #428bca;">{{ site.title }}</span>
           <span class="logo_subtitle">{{ site.tagline }}</span> </a>
           <a class="btn btn-navbar btn-default navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
