--- a/assets/themes/restart/css/style.css
+++ b/assets/themes/restart/css/style.css
@@ -6065,8 +6065,8 @@ header .container {
 .navbar a.navbar-brand img {
   float: left;
   margin: 0 6px 0 0;
-  width: 90px;
   height: 90px;
+  padding-bottom: 23px;
 }
 .navbar a.navbar-brand span.logo_title {
   font-size: 36px;
