--- a/assets/themes/restart/css/style.css
+++ b/assets/themes/restart/css/style.css
@@ -6064,11 +6064,21 @@ header .container {
 }
 .navbar a.navbar-brand img {
   float: left;
-  margin: 0 10px 0 0;
+  margin: 0 8px 0 0;
   height: 90px;
   padding-top: 16px;
   padding-bottom: 22px;
 }
+
+.navbar a.navbar-brand svg {
+  float: left;
+  margin: 0 8px 0 0;
+  height: 90px;
+  width: 54px;
+  padding-top: 16px;
+  padding-bottom: 22px;
+}
+
 .navbar a.navbar-brand span.logo_title {
   font-size: 36px;
   font-weight: 300;
