backround on the first page fix

--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -20,6 +20,7 @@
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
 <link rel="apple-touch-icon-precomposed" href="apple-touch-fa-57x57-precomposed.png">
 <link rel="shortcut icon" href="favicon.png">
+{% if page.style %}{{ page.style }}{% endif %}
 </head>
 
 <body class="collapsing_header">
