--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include JB/setup %}
 
-<section class="call_to_action">
+<section class="call_to_action" style="margin-top: -24px;">
   <div class="container">
     <div class="text">
       <h3 style="color: #428bca;"><strong>an aggregator for remote jobs</strong></h3>
@@ -34,10 +34,6 @@ layout: default
     </div>
   </div>
 </section>
-
-<div class="container">
-    <hr>
-</div>
 
 <section class="hgroup">
     <div class="container" style="padding-top: 0px; border-bottom: none;">
