--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -90,8 +90,9 @@ a.detail-icon:visited{
 
 @media screen and (min-width: 768px) {
     section.call_to_action {
-        background-image: url(/assets/svg/background1-14_opt-3.svg);
-        background-size: cover;
+        background-image: url(/assets/svg/background1-15_opt.svg);
+        background-size: contain;
         background-repeat: no-repeat;
     }
 }
+
