--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,17 +18,20 @@ layout: default
     <div class="row">
       <div class="feature_teaser col-sm-4 col-md-4">
           <object height="130px" width="80%" data="/assets/svg/f_prefiltered_v2_min.svg"></object>
-          <h3>PRE-FILTERED 100% REMOTE JOBS<br>&nbsp;<br></h3>
-          <p>This site shows you only the jobs having phrases like “team is entirely remote” or “work from whenever you want” in the job description. Jobs saying something like “remotely on Friday” or “occasional remote working” are filtered out.</p>
+          <h3>PRE-FILTERED 100% REMOTE JOBS</h3>
+          <p>This site shows you only the jobs having phrases like <em>“team is entirely remote”</em> or <em>“work from whenever you want”</em> in the job description.
+          </p>
+          <p>Jobs saying something like <em>“remotely on Friday”</em> or <em>“occasional remote working”</em> are filtered out.
+          </p>
       </div>
       <div class="feature_teaser col-sm-4 col-md-4">
           <object height="130px" width="80%" data="/assets/svg/f_categorized_1_min.svg"></object>
-          <h3>REMOTE JOBS CATEGORIZED BY JOB TITLE AND TECHNOLOGY STACK</h3>
+          <h3>JOB CLASSIFICATION</h3>
           <p>Correct job classification: for every remote role in a tech company this site offers a separate page. <strong>Developers:</strong> open a page listing remote jobs for your technology stack!</p>
       </div>
       <div class="feature_teaser col-sm-4 col-md-4">
         <object height="130px" width="80%" data="/assets/svg/f_one_place_min.svg"></object>
-        <h3>SEARCH 872 JOBS FROM 12 JOB BOARDS IN ONE PLACE</h3>
+        <h3>EVERYTHING IN ONE PLACE</h3>
         <p>Remote jobs scattered across generic job sites, job boards for developers/designers and specialized remote job board. This site makes the process of finding a remote job easier.</p>
       </div>
     </div>
