index, images as background
Former-commit-id: aac21ee71c87fd3b8ea5f6f0fdd70f891e5e9df0

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -17,7 +17,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="feature_teaser col-sm-4 col-md-4">
-          <object height="130px" width="80%" data="/assets/svg/f_prefiltered_v2_min.svg"></object>
+          <div style="height: 130px; width: 80%;" class="homepage-f1 center-block"></div>
           <h3>PRE-FILTERED 100% REMOTE JOBS</h3>
           <p>This site shows you only the jobs having phrases like <em>“team is entirely remote”</em> or <em>“work from whenever you want”</em> in the job description.
           </p>
@@ -25,14 +25,14 @@ layout: default
           </p>
       </div>
       <div class="feature_teaser col-sm-4 col-md-4">
-          <object height="130px" width="80%" data="/assets/svg/f_categorized_1_min.svg"></object>
+          <div style="height: 130px; width: 80%;" class="homepage-f2 center-block"></div>
           <h3>JOB CLASSIFICATION</h3>
           <p>Correct job classification: for every remote role in a tech company this site offers a separate page. <strong>Developers:</strong> open a page listing remote jobs for your technology stack!</p>
       </div>
       <div class="feature_teaser col-sm-4 col-md-4">
-        <object height="130px" width="80%" data="/assets/svg/f_one_place_min.svg"></object>
-        <h3>EVERYTHING IN ONE PLACE</h3>
-        <p>Remote jobs scattered across generic job sites, job boards for developers/designers and specialized remote job board. This site makes the process of finding a remote job easier.</p>
+          <div style="height: 130px; width: 80%;" class="homepage-f3 center-block"></div>
+          <h3>EVERYTHING IN ONE PLACE</h3>
+          <p>Remote jobs scattered across generic job sites, job boards for developers/designers and specialized remote job board. This site makes the process of finding a remote job easier.</p>
       </div>
     </div>
   </div>
