--- a/assets/themes/restart/css/font-awesome.css
+++ b/assets/themes/restart/css/font-awesome.css
@@ -2,11 +2,11 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src:  url('../fonts/FontAwesome.eot?534jp9');
-  src:  url('../fonts/FontAwesome.eot?534jp9#iefix') format('embedded-opentype'),
-  url('../fonts/FontAwesome.ttf?534jp9') format('truetype'),
-  url('../fonts/FontAwesome.woff?534jp9') format('woff'),
-  url('../fonts/FontAwesome.svg?534jp9#fontawesome') format('svg');
+  src:  url('../fonts/FontAwesome.eot?3kncqa');
+  src:  url('../fonts/FontAwesome.eot?3kncqa#iefix') format('embedded-opentype'),
+  url('../fonts/FontAwesome.ttf?3kncqa') format('truetype'),
+  url('../fonts/FontAwesome.woff?3kncqa') format('woff'),
+  url('../fonts/FontAwesome.svg?3kncqa#FontAwesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -201,7 +201,6 @@
 }
 /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
    readers do not read off random characters that represent icons */
-
 .fa-plus:before {
   content: "\f067";
 }
@@ -434,13 +433,24 @@
   content: "\e902";
 }
 .fa-java:before {
-  content: "\e900";
-}
-.fa-javascript:before {
   content: "\e903";
 }
-.fa-node:before {
+.fa-javascript:before {
   content: "\e904";
+}
+.fa-node:before {
+  content: "\e905";
+}
+.fa-check_icon_2:before {
+  content: "\e900";
+  color: #fff;
+}
+.fa-check_icon_1:before {
+  content: "\e906";
+  color: #fff;
+}
+.fa-solutions_architect2:before {
+  content: "\e907";
 }
 .fa-hr:before {
   content: "\e921";
@@ -481,26 +491,8 @@
 .fa-database:before {
   content: "\e91e";
 }
-.fa-solution_engineer:before {
-  content: "\e91f";
-}
 .fa-devops:before {
   content: "\e920";
-}
-.fa-filter_search_job:before {
-  content: "\e905";
-}
-.fa-categorization2:before {
-  content: "\e906";
-}
-.fa-collection:before {
-  content: "\e907";
-}
-.fa-categorization:before {
-  content: "\e908";
-}
-.fa-filter2:before {
-  content: "\e909";
 }
 .fa-otherlang:before {
   content: "\e90a";
