--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -121,3 +121,127 @@ div.homepage-f3 {
     background-position: center;
     text-align: center;
 }
+/* Search Filters */
+
+.search-bar {
+  margin-bottom: 20px;
+}
+.dropdown-fields {
+  padding-left: 12px;
+  width: 280px;
+}
+.btn-group, .input-group {
+  margin: 2px;
+}
+
+/* Checkbox and Radiobutton Styling */
+
+input[type="checkbox"],
+input[type="radio"] {
+  pointer-events: none;
+  opacity: 0;
+  position: absolute;
+  left: 20px;
+}
+input[type="checkbox"] + label,
+input[type="radio"] + label {
+  padding-left: 28px;
+  margin: 2px 0;
+}
+input[type="checkbox"] + label:before {
+  border-radius: 4px;
+}
+input[type="radio"] + label:before {
+  border-radius: 50%;
+}
+input[type="checkbox"] + label:before,
+input[type="radio"] + label:before {
+  content: " ";
+  position: absolute;
+  height: 22px;
+  width: 22px;
+  left: 0;
+  display: block;
+  box-sizing: border-box;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .6) inset;
+  border: 1px solid transparent;
+  transition-property: box-shadow;
+  transition-timing-function: cubic-bezier(0,0,.2,1);
+  transition-duration: 200ms;
+}
+input[type="checkbox"]:hover + label:before,
+input[type="radio"]:hover + label:before {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .9) inset;
+}
+input[type="checkbox"]:checked + label:before,
+input[type="radio"]:checked + label:before {
+  box-shadow: 0 0 0 11px #428bca inset;
+}
+
+/* input[type="checkbox"] + label:after {
+  display: none;
+  font-family: "FontAwesome";
+  content: "\e900";
+  color: #ffffff;
+  position: absolute;
+  width: 16px;
+  font-size: 1.7em;
+  overflow: hidden;
+} */
+
+span#checkmark {
+  position: absolute;
+  width: 16px;
+  font-size: 1.7em;
+  overflow: hidden;
+  display: block;
+  background-position: 0 -24px;
+  top: 6px;
+  left: 3px;
+}
+
+/* input[type="checkbox"]:checked + label:after {
+  display: block;
+  background-position: 0 -24px;
+  top: 1px;
+  left: 3px;
+} */
+
+input[type=radio]:checked+label:before {
+    box-shadow: 0 0 0 6px #428bca inset,0 0 0 11px #fff inset;
+}
+input[type=checkbox]:focus:checked+label:before {
+    box-shadow: 0 0 0 1px #428bca, 0 0 0 11px #428bca inset;
+}
+input[type=checkbox]:focus+label:before,
+input[type=radio]:focus+label:before {
+    box-shadow: 0 0 0 1px #428bca, 0 0 0 1px rgba(0,0,0,.9) inset;
+}
+input[type=radio]:focus:checked+label:before {
+  box-shadow: 0 0 0 1px #428bca, 0 0 0 6px #428bca inset,0 0 0 11px #fff inset;
+}
+
+/* Styles for the 1st fieldset in the search filter */
+/* fieldset.dropdown-fields {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.5em;
+} */
+
+/* Button styles for mobile screens */
+@media (max-width: 480px) {
+  .btn-div {
+    width: 100%;
+  }
+}
+/* @media (max-width: 650px) {
+  .btn-div {
+    width: 250px;
+  }
+} */
+
+div#filter-container {
+  padding-bottom: 0px;
+  padding-top: 0px;
+  border: 0px;
+}
