--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -134,7 +134,7 @@ div.homepage-f3 {
   margin: 2px;
 }
 
-/* Checkbox and Radiobutton Styling */
+/* Search Filters: checkbox and radiobutton Styling */
 
 input[type="checkbox"],
 input[type="radio"] {
@@ -178,17 +178,6 @@ input[type="radio"]:checked + label:before {
   box-shadow: 0 0 0 11px #428bca inset;
 }
 
-/* input[type="checkbox"] + label:after {
-  display: none;
-  font-family: "FontAwesome";
-  content: "\e900";
-  color: #ffffff;
-  position: absolute;
-  width: 16px;
-  font-size: 1.7em;
-  overflow: hidden;
-} */
-
 span#checkmark {
   position: absolute;
   width: 16px;
@@ -200,12 +189,6 @@ span#checkmark {
   left: 3px;
 }
 
-/* input[type="checkbox"]:checked + label:after {
-  display: block;
-  background-position: 0 -24px;
-  top: 1px;
-  left: 3px;
-} */
 
 input[type=radio]:checked+label:before {
     box-shadow: 0 0 0 6px #428bca inset,0 0 0 11px #fff inset;
@@ -221,24 +204,23 @@ input[type=radio]:focus:checked+label:before {
   box-shadow: 0 0 0 1px #428bca, 0 0 0 6px #428bca inset,0 0 0 11px #fff inset;
 }
 
-/* Styles for the 1st fieldset in the search filter */
-/* fieldset.dropdown-fields {
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 1.5em;
-} */
 
-/* Button styles for mobile screens */
+/* Search Filters: button styles for mobile screens */
 @media (max-width: 480px) {
-  .btn-div {
-    width: 100%;
-  }
+    .btn-div {
+        width: 65%;
+    }
 }
-/* @media (max-width: 650px) {
-  .btn-div {
-    width: 250px;
-  }
-} */
+
+@media (max-width: 410px) {
+    .btn-div {
+        width: 78%;
+    }
+    .btn-filter {
+        text-align: left;
+    }
+}
+
 
 div#filter-container {
   padding-bottom: 0px;
