menu-like list filter dropdowns

--- a/_includes/render_jobad_list.html
+++ b/_includes/render_jobad_list.html
@@ -6,7 +6,7 @@
     <div class="container" id="filter-container">
         <div class="row search-bar">
 
-          <div class="col-lg-6 col-md-5 col-sm-4 col-xs-12">
+          <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
             <form id="jobSearchForm">
               <div class="input-group">
                   <label class="sr-only" for="jobSearchInputID">Search</label>
@@ -19,13 +19,15 @@
               </div>
             </form>
           </div>
+        </div>
 
-          <div class="col-lg-6 col-md-7 col-sm-8 col-xs-12">
+        <div class="row">
 
+          <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
             <div class="btn-group btn-div">
-                <button class="btn btn-default dropdown-toggle btn-filter btn-block" type="button"
+                <button class="btn btn-default dropdown-toggle btn-filter" type="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span id="btn-tz">TZ: Worldwide</span>
+                  <span id="btn-tz">Timezone: Worldwide</span>
                   <span class="caret"></span>
                 </button>
                 <div class="dropdown-menu">
@@ -58,7 +60,7 @@
                     </div>
                   </fieldset>
                 </div>
-              </div>
+            </div>
 
             <!-- <div class="btn-group btn-div">
               <button class="btn btn-default dropdown-toggle btn-filter btn-block" type="button"
@@ -89,7 +91,7 @@
             </div> -->
 
             <div class="btn-group btn-div">
-              <button class="btn btn-default dropdown-toggle btn-filter btn-block" type="button"
+              <button class="btn btn-default dropdown-toggle btn-filter" type="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span  id="btn-remote">Remoteness: 100% remote</span>
                 <span class="caret"></span>
