--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -124,7 +124,7 @@ div.homepage-f3 {
 /* Search Filters */
 
 .search-bar {
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 .dropdown-fields {
   padding-left: 12px;
@@ -221,9 +221,30 @@ input[type=radio]:focus:checked+label:before {
     }
 }
 
-
+/*
 div#filter-container {
   padding-bottom: 0px;
   padding-top: 0px;
   border: 0px;
+} */
+
+/* Clear default button styles
+Create custom navbar-like custom styles */
+.btn-filter {
+  border: 0;
+  border-radius: 0;
+  color: #555555;
+}
+.btn-filter:hover,
+.btn-filter:focus,
+.btn-filter:active,
+.open > .dropdown-toggle.btn-filter {
+  background-color: transparent;
+  color: #000000;
+}
+.btn-filter:active {
+  box-shadow: none;
+}
+.btn-div.open .dropdown-toggle {
+  box-shadow: none;
 }
