--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -229,7 +229,7 @@ Create custom navbar-like custom styles */
 
 /* Table styling */
 td.spanLink a {
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 tr[data-index] {
   border: 1px solid #dddddd;
@@ -247,13 +247,17 @@ tr[data-index] {
     font-weight: normal;
     font-size: 12px;
     margin-right: 5px;
+    margin-top: 7px;
     padding: 5px;
 }
 td a .fa {
-  padding: 20px;
+  padding: 24px;
 }
 .highlight {
     padding: 9px 14px;
     border-left: 1px solid #dddddd;
     border-right: 1px solid #dddddd;
+}
+.job-info {
+margin: 5px 0;
 }
