--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -15,18 +15,6 @@ div.fixed-table-loading{
     font-size: 14px;
 }
 
-.labelTag {
-    background: transparent;
-    color: #6f6f6f;
-    border: 1px solid #dddddd;
-    float: left;
-    font-weight: normal;
-    font-size: 12px;
-    margin-right: 5px;
-    margin-top: 3px;
-    padding-right: 4px;
-    padding-left: 4px;
-}
 
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -46,19 +34,9 @@ tr.detail-view > td {
     padding-top: 16px !important;
 }
 
-.highlight {
-    padding: 9px 14px;
-    border-left: 1px solid #999999;
-    border-right: 1px solid #999999;
-}
-
 div.row {
     margin-left: 0;
     margin-right: 0;
-}
-
-tr[data-index] {
-    background-color: #f5f5f5;
 }
 
 a.rowTitleClass:visited {
@@ -247,4 +225,40 @@ Create custom navbar-like custom styles */
 }
 .btn-div.open .dropdown-toggle {
   box-shadow: none;
+}
+
+/* Table styling */
+td.spanLink a {
+  font-size: 1.3em;
+}
+tr[data-index] {
+  border: 1px solid #dddddd;
+}
+.table > tbody > tr > td {
+  padding: 0;
+}
+.table > tbody > tr > td.spanLink {
+  padding: 20px;
+}
+.labelTag {
+    background: #ffffff;
+    color: #777777;
+    border: 1px solid #dddddd;
+    float: left;
+    font-weight: normal;
+    font-size: 12px;
+    margin-right: 5px;
+    margin-top: 7px;
+    padding: 5px;
+}
+td a .fa {
+  padding: 24px;
+}
+.highlight {
+    padding: 9px 14px;
+    border-left: 1px solid #dddddd;
+    border-right: 1px solid #dddddd;
+}
+.job-info {
+margin: 5px 0;
 }
