--- a/_includes/themes/restart/page-jobad-jobdetails-handlebars.html
+++ b/_includes/themes/restart/page-jobad-jobdetails-handlebars.html
@@ -1,34 +1,33 @@
 {% raw %}
 <script id="detailFormatter" type="text/x-handlebars-template">
-    <div class="detail-view">
-        <td colspan="3"><span class="detailFooter"></span>
-            <div class="detailContent">
-                <div class="row">
-                    <div class="highlight">
+  <div class="detail-view">
+    <td colspan="3"><span class="detailFooter"></span>
+      <div class="detailContent">
+        <div class="highlight">
 
-                        <div class="col-xs-12 col-sm-12 col-md-12">
-                            {{{content}}}
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12">
-                            &nbsp;
-                        </div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12">
-                            <div style="padding-left: 0;" class="col-xs-6 col-md-6">
-                                <a href="{{{url}}}">View original job desription <i class="fa fa-external-link"
-                                                                                    aria-hidden="true"></i></a>
-                            </div>
-                            <div style="padding-right: 0;" class="col-sm-6 col-md-6 text-right">
-                                <a href="#{{{id}}}">Get shareable link <i class="fa fa-link" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                        <span class="detailFooter">&nbsp;</span>
-
-                    </div>
-                </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                {{{content}}}
             </div>
-        </td>
-    </div>
+          </div>
+
+          <div class="row footer-row">
+                <div class="col-xs-6 col-sm-6">
+                    <a href="{{{url}}}">View original job desription <i class="fa fa-external-link"
+                                                                        aria-hidden="true"></i></a>
+                </div>
+                <div class="col-xs-6 col-sm-6 text-right">
+                    <a href="#{{{id}}}">Get shareable link <i class="fa fa-link" aria-hidden="true"></i></a>
+                </div>
+
+            <span class="detailFooter">&nbsp;</span>
+
+          </div>
+
+          </div>
+        </div>
+      </div>
+    </td>
+  </div>
 </script>
 {% endraw %}
